add test to cnpj and cpf